--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="gront.daniel.locationserviceapplication">
 
     <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name = "android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD4HaiHZ6vgnlgK4AbvNnQRehcMa4emrEQ"/>
     </application>
 
 </manifest>
